# piecewise-linear-fit

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
docs/: README.md  algorithm.md  architecture.md  backend.md  export.md  getting-started.md  index.md  mathematics.md  notebook.md  qml.md  screenshots.md
docs/assets/javascripts/: mermaid-init.js
docs/assets/stylesheets/: extra.css
docs/notebooks/: segmented-linear-fit.md
files/: segmented_linear_fit.ipynb
files/VERIFICAR/: R2Bussines_Encoder.ipynb
qml/: Main.qml  qmldir
qml/components/: AppButton.qml  MetricTile.qml  NavButton.qml  PlotPanel.qml  PointTablePanel.qml
qml/pages/: CsvPage.qml  DataPage.qml  HomePage.qml  ManualPage.qml  ResultsPage.qml
src/: AppController.cpp  AppController.h  PointTableModel.cpp  PointTableModel.h  PointTypes.h  SegmentFitService.cpp  SegmentFitService.h  main.cpp
